ola-parser/src/testdata/syntaxTests/modifiers/use_in_invalid_context.sol
contract test {
    modifier mod() { _; }

    fn f()  {
        mod  ;
    }
}
// ----
// TypeError 3112: (77-80): Modifier can only be referenced in fn headers.
